// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth0Button test render test render correctly 1`] = `
<Button
  auth0={null}
  auth0SignIn={[Function]}
  auth0SignOut={[Function]}
/>
`;

exports[`withAuth0 test render test render correctly 1`] = `
<class_1
  auth0={null}
  auth0SignIn={[Function]}
  auth0SignOut={[Function]}
/>
`;
